11210
A workaround would be to explicitly type annotate the lines referenced in the error.

e.g.:
```
|    |    caught scala.reflect.internal.Symbols$CyclicReference: illegal cyclic reference involving value projects: while typing system.actorOf(Props(new Projects(projectFactory)), "Projects")
/Users/wedens/Documents/Projects/vim-scala-completion/src/main/scala/vim/scalacompletion/api/Boot.scala:50: error: recursive value projects needs type
  val projects = system.actorOf(Props(new Projects(projectFactory)), "Projects")
                               ^
|    |    \-> <error>
```
```scala
val projects: Actor = ...
```
